--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div class="login-box">
   <h2>Animated Login</h2>
   <form>
+    <h1>Basic form</h1>
     <div class="user-box">
       <input type="text" name="" required="">
       <label>User name</label>
